# goldberg-hexgrid

./: .gitattributes  .gitignore  MIGRATION_NOTES.md  README.md  SETUP.md  pyproject.toml
goldberg_hexgrid/: __init__.py  goldberg_polyhedron.py  hex_grid.py  rendering.py
notebooks/: render_hexgrid.ipynb
